[chg] Properly produce rows from original snapshot